--- a/src/components/offers/offers.scss
+++ b/src/components/offers/offers.scss
@@ -11,12 +11,23 @@
             justify-content: space-evenly;
             text-transform: uppercase;
             align-items: center;
+           
 
             .bold {
                 font-size: large;
                 font-weight: bold;
                 display: flex;
                 margin: 0 10px;
+            }
+            .note {
+               font-size: 1em;
+               text-align: justify;
+               display: flex;
+               font-weight: lighter;
+               font-family: Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+               i {
+                   font-weight:lighter;
+               }
             }
 
         }
@@ -84,6 +95,11 @@ a.addInFormBTN {
             justify-content: center;
             display: flex;
         }
+        .detailsContainer {
+            .detail {
+                flex-direction: column;
+            }
+        }
     }
 }
 
@@ -92,5 +108,6 @@ a.addInFormBTN {
         .offerDetail {
             white-space: nowrap;
         }
+
     }
 }
