--- a/src/components/offers/offers.scss
+++ b/src/components/offers/offers.scss
@@ -2,32 +2,39 @@
     .detailsContainer {
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
+        align-items: unset;
         padding: 1rem;
+        min-height: 172px;
+        row-gap: 15px;
+        padding: 0 0 15px 0;
 
         .detail {
             display: flex;
-            justify-content: space-evenly;
+            justify-content: space-between;
             text-transform: uppercase;
             align-items: center;
-           
+            font-size: 0.8rem;
+            font-weight: bolder;
+
 
             .bold {
-                font-size: large;
-                font-weight: bold;
-                display: flex;
-                margin: 0 10px;
+                font-size: 1.1rem;
+                font-weight: 600;
+                // display: flex;
+                // margin: 0 10px;
             }
+
             .note {
-               font-size: 1em;
-               text-align: justify;
-               display: flex;
-               font-weight: lighter;
-               font-family: Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-               i {
-                   font-weight:lighter;
-               }
+                font-size: 1em;
+                text-align: justify;
+                display: flex;
+                font-weight: lighter;
+                font-family: Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+                margin: 0 auto;
+
+                i {
+                    font-weight: lighter;
+                }
             }
 
         }
@@ -42,6 +49,10 @@
 .billLInk {
     color: #274091;
     font-size: 0.9rem;
+}
+
+.textStart {
+    text-align: start;
 }
 
 .ant-radio-group {
@@ -76,7 +87,17 @@ a.addInFormBTN {
     .offerDetail {
         display: flex;
         justify-content: flex-end;
-        margin: 10px 0;
+        margin: 5px 0;
+        width: 230px;
+        background: #ffffff63;
+        justify-content: space-between;
+        padding-block: 8px;
+        padding-inline-start: 15px;
+        border: 1px solid #c60874;
+
+        &:lang(en) {
+            width: 253px;
+        }
 
         p {
             margin: 0 1rem;
@@ -89,12 +110,35 @@ a.addInFormBTN {
     }
 }
 
+.companyParent {
+    border: 2px solid #c608749e;
+    padding: 5px 5px 15px 3px;
+
+    border-radius: 4px;
+    box-shadow: 1px 7px 7px 0px #c608749e;
+    transition: all 0.2s ease-in-out;
+
+    &:hover {
+        transform: scaleY(1.02);
+        border: 2px solid #274091;
+        box-shadow: 1px 7px 3px 0px #274091;
+    }
+}
+
+@media only screen and (max-width:750px) {
+
+    .textStart {
+        text-align: center;
+    }
+}
+
 @media only screen and (max-width:500px) {
     .offersContainer {
         .buttonContainer {
             justify-content: center;
             display: flex;
         }
+
         .detailsContainer {
             .detail {
                 flex-direction: column;
