--- a/src/main-component/ShippingRequestPage/shippingrequestpage.scss
+++ b/src/main-component/ShippingRequestPage/shippingrequestpage.scss
@@ -100,7 +100,16 @@
                 display: flex;
                 justify-content: space-evenly;
                 align-items: center;
-                padding: 30px;
+                /* padding: 30px; */
+                height: 75px;
+                width: 75px;
+                z-index: 2;
+                max-width: 100%;
+                background: #d0d1d3;
+                box-shadow: 0px 0px 0px 4px #d0d1d3;
+
+
+
 
                 p {
                     margin: 0;
@@ -111,7 +120,7 @@
                     font-weight: 700;
                     position: relative;
                     border-radius: 50%;
-                    padding-bottom: 10px;
+                    // padding-bottom: 10px;
                 }
             }
 
@@ -127,7 +136,7 @@
         //     top:0
         // }
         .shippingRequestRow {
-            padding-top: 5rem;
+            padding-top: 4rem;
             // min-height: 800px;
             justify-content: center;
             align-items: center;
@@ -211,87 +220,114 @@
             }
         }
     }
+
     .circleShape {
         border-radius: 100%;
     }
+
     .inprogress {
-        min-height: 40px;
-        display:flex;
+        // min-height: 40px;
+        display: flex;
         align-self: center;
-        background: purple ;
-        animation: inProgress 2s cubic-bezier(0.23, 1, 0.320, 1) infinite forwards ;
-        border-radius: 40px;
-        
+        background: purple;
+        animation: inProgress 2s cubic-bezier(0.23, 1, 0.320, 1) infinite forwards;
+        // border-radius: 40px;
+
     }
-    
-   
+
+
     @keyframes inProgress {
         0% {
-            background: linear-gradient(0.25turn ,purple 95%,rgba(173, 4, 173, 0.884) 5% ) ;
+            background: linear-gradient(0.25turn, purple 95%, rgba(173, 4, 173, 0.884) 5%);
         }
+
         20% {
-            background: linear-gradient(0.25turn ,purple 75% ,rgba(173, 4, 173, 0.884) 5% ,purple ) ;
+            background: linear-gradient(0.25turn, purple 75%, rgba(173, 4, 173, 0.884) 5%, purple);
         }
+
         40% {
-            background: linear-gradient(0.25turn ,purple 65% ,rgba(173, 4, 173, 0.884) 5% ,purple ) ;
+            background: linear-gradient(0.25turn, purple 65%, rgba(173, 4, 173, 0.884) 5%, purple);
         }
+
         60% {
-            background: linear-gradient(0.25turn ,purple 55% ,rgba(173, 4, 173, 0.884) 5% ,purple ) ;
+            background: linear-gradient(0.25turn, purple 55%, rgba(173, 4, 173, 0.884) 5%, purple);
         }
+
         80% {
-            background: linear-gradient(0.25turn ,purple 45% ,rgba(173, 4, 173, 0.884) 5% ,purple ) ;
+            background: linear-gradient(0.25turn, purple 45%, rgba(173, 4, 173, 0.884) 5%, purple);
         }
+
         100% {
-            background:linear-gradient(0.25turn , rgba(173, 4, 173, 0.884) 5% ,purple 95% )
+            background: linear-gradient(0.25turn, rgba(173, 4, 173, 0.884) 5%, purple 95%)
         }
     }
-  
+
     .previousStage {
         //color:#34ccff;
         color: white;
-        background-color: rgba(111, 252, 98, 0.404);
-        animation: radialToGreen 2s ease-in 1 forwards  ;
+        background-color: #008000;
+        animation: radialToGreen 2s ease-in 1 forwards;
+        box-shadow: 0px 0px 0px 4px #008000 !important;
+
         p {
             color: white;
             font-size: x-large;
             font-weight: bold;
         }
     }
-    
+
     .currentStage {
         color: white;
         background-color: purple;
-        animation: radialToPurple 2s ease-in 1 forwards ,
-                   radialProgress 2s cubic-bezier(0.23, 1, 0.320, 1) 2s infinite forwards ;
-    
+        animation: radialToPurple 2s ease-in 1 forwards,
+            radialProgress 2s cubic-bezier(0.23, 1, 0.320, 1) 2s infinite forwards;
+        box-shadow: 0px 0px 0px 4px #980a94 !important;
+
+
         p {
             color: white;
             font-size: x-large;
             font-weight: bold;
         }
     }
+
+    .inbetweenStages {
+        width: calc((100% - 226px) / 2);
+        position: relative;
+        height: 5px;
+        align-self: center;
+        z-index: 0;
+        background: #d0d1d3;
+
+    }
+
     @keyframes radialToGreen {
         from {
-            background:radial-gradient(green,purple);
+            background: radial-gradient(green, purple);
         }
+
         to {
-            background:green;
+            background: green;
         }
     }
+
     @keyframes radialToPurple {
         from {
-            background:radial-gradient(purple,white);
+            background: radial-gradient(purple, white);
         }
+
         to {
-            background:purple;
+            background: purple;
         }
     }
+
     @keyframes radialProgress {
         from {
-            background: linear-gradient(0.25turn, purple  ,rgba(173, 4, 173, 0.884)  ) ;
+            background: linear-gradient(0.25turn, purple, rgba(173, 4, 173, 0.884));
         }
+
         to {
-            background: linear-gradient(0.25turn,rgba(173, 4, 173, 0.884),purple  );
+            background: linear-gradient(0.25turn, rgba(173, 4, 173, 0.884), purple);
         }
     }
 }
