--- a/src/components/Bills/styleBills.scss
+++ b/src/components/Bills/styleBills.scss
@@ -252,3 +252,12 @@
      text-align: end;
    }
  }
+
+ .downURl {
+   display: flex;
+   padding: 6px 25px;
+   border: 2px solid #274091;
+   color: #274091;
+   margin-inline-end: 12px;
+   margin-block: 4px;
+ }
