--- a/src/components/offers/offers.scss
+++ b/src/components/offers/offers.scss
@@ -108,6 +108,28 @@ a.addInFormBTN {
             font-weight: bold;
         }
     }
+    i {
+        align-self:center;
+        margin:1px;
+        color: #c60874;
+        border: 2px solid;
+        border-radius: 50%;
+        height: 20px;
+        width: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 14px;
+        cursor: pointer;
+        transition: all .2s ease-in-out;
+
+        &:hover {
+            color: #274091;
+            border: 1px solid;
+            font-size: 15px;
+
+        }
+    }
 }
 
 .companyParent {
