--- a/src/main-component/ShippingRequestPage/shippingrequestpage.scss
+++ b/src/main-component/ShippingRequestPage/shippingrequestpage.scss
@@ -242,23 +242,23 @@
         }
 
         20% {
-            background: linear-gradient(0.25turn, transparent 75%, rgba(173, 4, 173, 0.884) );
+            background: linear-gradient(0.25turn, transparent 75%, rgba(173, 4, 173, 0.884));
         }
 
         40% {
-            background: linear-gradient(0.25turn, transparent 55%, rgba(173, 4, 173, 0.884) );
+            background: linear-gradient(0.25turn, transparent 55%, rgba(173, 4, 173, 0.884));
         }
 
         60% {
-            background: linear-gradient(0.25turn, transparent 1%, rgba(173, 4, 173, 0.884) );
+            background: linear-gradient(0.25turn, transparent 1%, rgba(173, 4, 173, 0.884));
         }
 
         80% {
-            background:  rgba(173, 4, 173, 0.884) ;
+            background: rgba(173, 4, 173, 0.884);
         }
 
         100% {
-            background:  rgba(173, 4, 173, 0.884);
+            background: rgba(173, 4, 173, 0.884);
         }
 
     }
@@ -282,7 +282,7 @@
         background-color: purple;
         animation: radialToPurple 2s ease-in 1 forwards,
             radialProgress 2.5s linear 2.5s infinite forwards;
-       
+
 
 
         p {
@@ -326,20 +326,23 @@
         0% {
             background: transparent;
         }
+
         55% {
             background: transparent;
         }
+
         60% {
-            box-shadow: 0px 0px 0px 1px #980a94 ;
+            box-shadow: 0px 0px 0px 1px #980a94;
         }
+
         65% {
             background: linear-gradient(0.25turn, transparent 50%, rgba(173, 4, 173, 0.884) 50%);
-            box-shadow: 0px 0px 0px 4px #980a94 ;
+            box-shadow: 0px 0px 0px 4px #980a94;
         }
 
         100% {
             background: linear-gradient(0.25turn, rgba(173, 4, 173, 0.884) 99%, transparent 1%);
-            box-shadow: 0px 0px 0px 4px #980a94 ;
+            box-shadow: 0px 0px 0px 4px #980a94;
         }
     }
 }
@@ -374,6 +377,10 @@
 }
 
 @media only screen and (max-width:501px) {
+    .shippingRequestSection .container .shippingRequestIntro {
+        min-height: 226px;
+    }
+
     .shippingRequestSection {
         .ant-form-item .ant-form-item-label>label {
             margin: 0;
@@ -386,7 +393,7 @@
             padding-top: 5rem;
 
             .shippingRequestRow {
-                padding: 5px;
+                padding-inline: 5px;
 
                 .shippingRequestCol {
                     .row {
@@ -439,4 +446,19 @@
     .ant-notification-notice-with-icon .ant-notification-notice-description {
         text-align: end;
     }
+}
+
+.ant-picker-decade-panel,
+.ant-picker-year-panel,
+.ant-picker-quarter-panel,
+.ant-picker-month-panel,
+.ant-picker-week-panel,
+.ant-picker-date-panel,
+.ant-picker-time-panel {
+
+    direction: ltr;
+}
+
+.ant-picker {
+    width: 100%;
 }
